--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta charset="UTF-8">
         <title>Apps Time Tracker</title>
         <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
+        <link rel="stylesheet" href="./style.css" />
         <script>
             let $ = require('jquery');
             require('popper.js');
@@ -30,7 +31,6 @@
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-<!--                        <button type="button" class="btn btn-primary">Save changes</button>-->
                     </div>
                 </div>
             </div>
@@ -51,8 +51,9 @@
 
             <div class="tab-content jumbotron">
                 <div class="tab-pane active" id="chart-tab">
-                    <h1 class="display-4">Hello, world!</h1>
-                    <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+
+                    <h1 class="display-4">Hello there!</h1>
+                    <p class="lead">This is a simple hero unit, click <kbd>Get my opened fucking processes!</kbd> for get open processes from settings list.</p>
                     <hr class="my-4">
                     <p>
                         We are using Node.js <script>document.write(process.versions.node)</script>,
@@ -60,11 +61,36 @@
                         and Electron <script>document.write(process.versions.electron)</script>.
                     </p>
                     <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalLong">
-                        Launch modal
+                        Get my opened fucking processes!
                     </button>
+
                 </div>
+
+
+                <!-- SETTINGS TAB -->
                 <div class="tab-pane" id="settings-tab">
-                    bay
+
+
+
+
+                    <table class="table table-sm">
+                        <thead>
+                        <h4>Selected process list</h4>
+                        <tr>
+                            <th scope="col">#</th>
+                            <th scope="col">Name</th>
+                            <th scope="col">
+                                <button class="float-right btn-action btn-success" id="add-processes">Add</button>
+                            </th>
+                        </tr>
+                        </thead>
+                        <tbody id="process-table">
+                        </tbody>
+                    </table>
+
+
+
+
                 </div>
             </div>
 
