--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
             require('popper.js');
             require('bootstrap');
             require('./functions.js');
+            const moment = require('moment');
         </script>
+        <script src="additional_libs/amcharts4/core.js"></script>
+        <script src="additional_libs/amcharts4/charts.js"></script>
+        <script src="additional_libs/amcharts4/themes/dark.js"></script>
+        <script src="additional_libs/amcharts4/themes/animated.js"></script>
     </head>
 
     <body>
@@ -49,28 +54,18 @@
             </ul>
             <br>
 
-            <div class="tab-content jumbotron">
+            <div class="tab-content">
                 <div class="tab-pane active" id="chart-tab">
-
-                    <h1 class="display-4">Hello there!</h1>
-                    <p class="lead">This is a simple hero unit, click <kbd>Get my opened fucking processes!</kbd> for get open processes from settings list.</p>
-                    <hr class="my-4">
-                    <p>
-                        We are using Node.js <script>document.write(process.versions.node)</script>,
-                        Chromium <script>document.write(process.versions.chrome)</script>,
-                        and Electron <script>document.write(process.versions.electron)</script>.
-                    </p>
-                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalLong">
-                        Get my opened fucking processes!
-                    </button>
-
+                    <button class="btn-action btn-danger" id="clear-all">Clear All</button>
+                    <div id="chartdiv"></div>
                 </div>
 
 
                 <!-- SETTINGS TAB -->
                 <div class="tab-pane" id="settings-tab">
 
-
+                    <label for="currentTimeoutRange">Handling timeout <span id="currentTimeout"></span> sec</label>
+                    <input type="range" class="custom-range" min="10" max="60" step="10" id="currentTimeoutRange">
 
 
                     <table class="table table-sm">
@@ -97,5 +92,73 @@
         </div>
 
     </body>
+
+    <script>
+        let colorSet = new am4core.ColorSet();
+        colorSet.saturation = 0.4;
+
+        function setColors(items) {
+            let buffer = {};
+            items.forEach((item, index) => {
+                if (buffer[item.name] === undefined) {
+                    buffer[item.name] = colorSet.getIndex(index)
+                }
+                item.color = buffer[item.name]
+            });
+            return items
+        }
+
+        document.addEventListener('DOMContentLoaded', function() {
+
+            am4core.ready(function () {
+                // am4core.useTheme(am4themes_dark);
+                am4core.useTheme(am4themes_animated);
+
+                let chart = am4core.create("chartdiv", am4charts.XYChart);
+                chart.hiddenState.properties.opacity = 0; // this creates initial fade-in
+
+                chart.paddingRight = 30;
+                chart.dateFormatter.inputDateFormat = "yyyy-MM-dd HH:mm";
+
+                chart.data = setColors(window.config.trackData);
+
+                // chart.events.on("datavalidated", function () {
+                //     dateAxis.zoom({ start: 1 / 15, end: 1.2 }, false, true);
+                // });
+
+                let categoryAxis = chart.yAxes.push(new am4charts.CategoryAxis());
+                categoryAxis.dataFields.category = "name";
+                categoryAxis.renderer.grid.template.location = 0;
+                categoryAxis.renderer.inversed = true;
+
+                let dateAxis = chart.xAxes.push(new am4charts.DateAxis());
+                dateAxis.dateFormatter.dateFormat = "yyyy-MM-dd HH:mm:ss";
+                dateAxis.renderer.minGridDistance = 70;
+                dateAxis.baseInterval = {count: 1, timeUnit: "minute"};
+                // dateAxis.max = moment(Date.now()).add(1, 'd').startOf('day').toDate().getTime();
+                // dateAxis.min = moment(Date.now()).startOf('day').toDate().getTime();
+                dateAxis.strictMinMax = true;
+                dateAxis.renderer.tooltipLocation = 0;
+
+                let series1 = chart.series.push(new am4charts.ColumnSeries());
+                series1.columns.template.width = am4core.percent(80);
+                series1.columns.template.tooltipText = "{name}: {openDateX} - {dateX}";
+
+                series1.dataFields.openDateX = "fromDate";
+                series1.dataFields.dateX = "toDate";
+                series1.dataFields.categoryY = "name";
+                series1.columns.template.propertyFields.fill = "color"; // get color from data
+                series1.columns.template.propertyFields.stroke = "color";
+                series1.columns.template.strokeOpacity = 1;
+
+                chart.scrollbarX = new am4core.Scrollbar();
+
+                window.chart = chart
+
+            }); // end am4core.ready()
+
+        }, false);
+
+    </script>
 
 </html>
