--- a/index.html
+++ b/index.html
@@ -5,53 +5,43 @@
         <meta charset="UTF-8">
         <title>Apps Time Tracker</title>
         <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
-        <link rel="stylesheet" href="./style.css" />
+        <link rel="stylesheet" href="css/style.css" />
         <script>
             let $ = require('jquery');
             require('popper.js');
             require('bootstrap');
-            require('./functions.js');
-            const moment = require('moment');
+            require('js/functions.js');
+            // const moment = require('moment');
         </script>
-        <script src="additional_libs/amcharts4/core.js"></script>
-        <script src="additional_libs/amcharts4/charts.js"></script>
-        <script src="additional_libs/amcharts4/themes/dark.js"></script>
-        <script src="additional_libs/amcharts4/themes/animated.js"></script>
+        <script src="js/amcharts4/core.js"></script>
+        <script src="js/amcharts4/charts.js"></script>
+        <script src="js/amcharts4/themes/dark.js"></script>
+        <script src="js/amcharts4/themes/animated.js"></script>
     </head>
 
     <body>
 
-        <!-- Modal -->
-        <div class="modal fade" id="exampleModalLong" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
-            <div class="modal-dialog" role="document">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                            <span aria-hidden="true">&times;</span>
-                        </button>
-                    </div>
-                    <div class="modal-body">
-                        <p id="p1"></p>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    </div>
-                </div>
+        <nav class="navbar navbar-expand-sm navbar-light bg-light sticky-top">
+            <a class="navbar-brand" href="#">
+                <img src="images/time-left.svg" width="30" height="30" class="d-inline-block align-top" alt="">
+                AppsTimeTracker
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="nav navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link active" href="#chart-tab" data-toggle="tab">Analysis</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#settings-tab" data-toggle="tab">Settings</a>
+                    </li>
+                </ul>
             </div>
-        </div>
+        </nav>
 
         <div class="container">
-            <br>
-
-            <ul class="nav nav-pills">
-                <li class="nav-item active">
-                    <a class="nav-link active" href="#chart-tab" data-toggle="tab">Analysis</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#settings-tab" data-toggle="tab">Settings</a>
-                </li>
-            </ul>
             <br>
 
             <div class="tab-content">
