--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             let $ = require('jquery');
             require('popper.js');
             require('bootstrap');
-            require('js/functions.js');
+            require('./js/functions.js');
             // const moment = require('moment');
         </script>
         <script src="js/amcharts4/core.js"></script>
